--- a/src/main/resources/view/therapist-availability-page.fxml
+++ b/src/main/resources/view/therapist-availability-page.fxml
@@ -1,73 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TreeTableColumn?>
+<?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="760.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.ijse.serenitymentalhealth.controller.TherapistsController">
+
+<AnchorPane prefHeight="577.0" prefWidth="1040.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.ijse.serenitymentalhealth.controller.TherapistAvailabilityController">
    <children>
-      <Label alignment="CENTER" layoutX="610.0" layoutY="22.0" prefHeight="33.0" prefWidth="138.0" text="Therapists">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
-      <VBox layoutX="98.0" layoutY="100.0" prefHeight="286.0" prefWidth="443.0" spacing="20.0">
+      <VBox layoutX="15.0" layoutY="72.0" prefHeight="266.0" prefWidth="666.0" spacing="20.0">
          <children>
             <HBox prefHeight="34.0" prefWidth="314.0">
                <children>
-                  <Label prefHeight="18.0" prefWidth="158.0" text="Therapist ID">
+                  <Label prefHeight="18.0" prefWidth="134.0" text="Availability ID">
                      <font>
                         <Font size="18.0" />
-                     </font></Label>
-                  <TextField fx:id="therapistIdTxt" prefHeight="26.0" prefWidth="128.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="availabilityIdTxt" prefHeight="26.0" prefWidth="204.0" />
                </children>
             </HBox>
-            <HBox prefHeight="34.0" prefWidth="314.0">
+            <HBox prefHeight="34.0" prefWidth="314.0" spacing="10.0">
                <children>
-                  <Label prefHeight="27.0" prefWidth="158.0" text="Therapist Name">
+                  <Label prefHeight="27.0" prefWidth="134.0" text="Therapist Name">
                      <font>
                         <Font size="18.0" />
-                     </font></Label>
+                     </font>
+                  </Label>
                   <TextField fx:id="therapistNameTxt" prefHeight="26.0" prefWidth="204.0" />
+                  <Button fx:id="therapistSearchBtn" focusTraversable="false" mnemonicParsing="false" onAction="#therapistSearch" prefHeight="26.0" prefWidth="97.0" styleClass="process-button" stylesheets="@../cssStyles/process-button.css" text="Search">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <TextField fx:id="therapistIdTxt" prefHeight="26.0" prefWidth="118.0" />
                </children>
             </HBox>
             <HBox prefHeight="34.0" prefWidth="314.0">
                <children>
-                  <Label prefHeight="18.0" prefWidth="158.0" text="Email">
+                  <Label prefHeight="18.0" prefWidth="134.0" text="Available Date">
                      <font>
                         <Font size="18.0" />
-                     </font></Label>
-                  <TextField fx:id="therapistEmailTxt" prefHeight="26.0" prefWidth="248.0" />
+                     </font>
+                  </Label>
+                  <DatePicker fx:id="availableDateTxt" />
                </children>
             </HBox>
             <HBox prefHeight="34.0" prefWidth="314.0">
                <children>
-                  <Label prefHeight="18.0" prefWidth="158.0" text="Phone">
+                  <Label prefHeight="18.0" prefWidth="134.0" text="Available Time">
                      <font>
                         <Font size="18.0" />
-                     </font></Label>
-                  <TextField fx:id="therapistPhoneTxt" prefHeight="26.0" prefWidth="132.0" />
+                     </font>
+                  </Label>
+                  <ChoiceBox fx:id="availableTimeTxt" prefWidth="150.0" />
                </children>
             </HBox>
             <HBox prefHeight="34.0" prefWidth="314.0">
                <children>
-                  <Label prefHeight="18.0" prefWidth="158.0" text="Specialization">
+                  <Label prefHeight="18.0" prefWidth="134.0" text="Availability">
                      <font>
                         <Font size="18.0" />
-                     </font></Label>
-                  <TextField fx:id="therapistSpecsTxt" prefHeight="26.0" prefWidth="249.0" />
+                     </font>
+                  </Label>
+                  <ChoiceBox fx:id="statusTxt" prefWidth="150.0" />
                </children>
             </HBox>
          </children>
       </VBox>
-      <HBox alignment="CENTER" layoutX="855.0" layoutY="372.0" prefHeight="34.0" prefWidth="358.0" spacing="10.0">
+      <TreeTableView fx:id="therapistAvailabilityTable" layoutX="128.0" layoutY="344.0" prefHeight="200.0" prefWidth="782.0">
+        <columns>
+          <TreeTableColumn fx:id="availableIdCol" prefWidth="133.60000610351562" text="Availability ID" />
+          <TreeTableColumn fx:id="therapistIdCol" prefWidth="180.80001831054688" text="Therapist ID" />
+            <TreeTableColumn fx:id="availableDateCol" prefWidth="164.79998779296875" text="Date" />
+            <TreeTableColumn fx:id="availableTimeCol" prefWidth="141.60003662109375" text="Time" />
+            <TreeTableColumn fx:id="availableStatusCol" prefWidth="160.0" text="Available" />
+        </columns>
+      </TreeTableView>
+      <HBox alignment="CENTER" layoutX="696.0" layoutY="285.0" prefHeight="34.0" prefWidth="334.0" spacing="10.0">
          <children>
             <Button fx:id="deleteButton" focusTraversable="false" mnemonicParsing="false" onAction="#delete" prefHeight="26.0" prefWidth="97.0" styleClass="process-button" stylesheets="@../cssStyles/process-button.css" text="Delete">
                <effect>
@@ -95,16 +116,7 @@
             </Button>
          </children>
       </HBox>
-      <TableView fx:id="therapistsTable" layoutX="188.0" layoutY="445.0" prefHeight="262.0" prefWidth="971.0">
-         <columns>
-            <TableColumn fx:id="therapistIdCol" prefWidth="75.0" text="Therapist ID" />
-            <TableColumn fx:id="therapistNameCol" prefWidth="207.2000732421875" text="Therapist Name" />
-            <TableColumn fx:id="therapistEmailCol" prefWidth="218.4000244140625" text="Email" />
-            <TableColumn fx:id="therapistPhoneCol" prefWidth="131.2000732421875" text="Phone" />
-            <TableColumn fx:id="therapistSpecsCol" prefWidth="335.199951171875" text="Specialization" />
-         </columns>
-      </TableView>
-      <HBox alignment="CENTER" layoutX="859.0" layoutY="270.0" prefHeight="64.0" prefWidth="338.0" spacing="20.0">
+      <HBox alignment="CENTER" layoutX="703.0" layoutY="177.0" prefHeight="64.0" prefWidth="326.0" spacing="20.0">
          <children>
             <TextField fx:id="searchTxt" prefHeight="26.0" prefWidth="186.0" />
             <Button fx:id="searchButton" focusTraversable="false" mnemonicParsing="false" onAction="#search" prefHeight="26.0" prefWidth="97.0" styleClass="process-button" stylesheets="@../cssStyles/process-button.css" text="Search">
@@ -117,13 +129,10 @@
             </Button>
          </children>
       </HBox>
-      <Button fx:id="therapistAvailabilityBtn" focusTraversable="false" layoutX="975.0" layoutY="85.0" mnemonicParsing="false" onAction="#loadTherapistAvailabilityPage" prefHeight="40.0" prefWidth="204.0" styleClass="process-button" stylesheets="@../cssStyles/process-button.css" text="Therapist Availability">
-         <effect>
-            <DropShadow />
-         </effect>
+      <Label alignment="CENTER" layoutX="380.0" layoutY="14.0" prefHeight="35.0" prefWidth="279.0" text="Therapist Availability">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
-      </Button>
+      </Label>
    </children>
 </AnchorPane>
