--- a/src/main/resources/view/login-page.fxml
+++ b/src/main/resources/view/login-page.fxml
@@ -1,62 +1,132 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="baseAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="795.0" prefWidth="1535.0" stylesheets="@../cssStyles/styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.ijse.serenitymentalhealth.controller.LoginController">
+<AnchorPane fx:id="baseAnchorPane" prefHeight="795.0" prefWidth="1535.0" style="-fx-background-color: #f5f7fa;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.ijse.serenitymentalhealth.controller.LoginController">
    <children>
-      <Pane fx:id="loginPane" prefHeight="795.0" prefWidth="1535.0">
+      <Pane fx:id="loginPane" prefHeight="795.0" prefWidth="1535.0" />
+      <Label alignment="CENTER" layoutX="414.0" layoutY="45.0" prefHeight="64.0" prefWidth="691.0" style="-fx-text-fill: #333;" text="Serenity Mental Health Therapy Center">
+         <font>
+            <Font name="Book Antiqua Bold" size="36.0" />
+         </font>
+      </Label>
+
+      <!-- Main container that holds both the image and forms -->
+      <Pane fx:id="mainContainer" layoutX="260.0" layoutY="147.0" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-radius: 20; -fx-border-radius: 20;">
          <children>
-            <VBox alignment="CENTER" layoutX="930.0" layoutY="312.0" prefHeight="226.0" prefWidth="322.0" spacing="20.0" style="-fx-background-color: white; -fx-border-radius: 30; -fx-background-radius: 30;">
+            <!-- Login Pane (default visible) -->
+            <Pane fx:id="loginTogglePane" layoutX="500.0" layoutY="1.0" prefHeight="600.0" prefWidth="500.0" style="-fx-background-color: #ffffff;">
                <children>
-                  <HBox alignment="CENTER" prefHeight="40.0" prefWidth="277.0" spacing="20.0">
+                  <VBox fx:id="loginBox" alignment="CENTER" layoutX="96.0" layoutY="120.0" prefHeight="288.0" prefWidth="320.0" spacing="20.0">
                      <children>
-                        <Label text="Username">
+                        <Label text="Welcome Back">
                            <font>
-                              <Font name="System Bold" size="12.0" />
+                              <Font name="Book Antiqua Bold" size="18.0" />
                            </font></Label>
-                        <JFXTextField fx:id="usernameText" prefHeight="26.0" prefWidth="171.0" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER" prefHeight="40.0" prefWidth="277.0" spacing="20.0">
-                     <children>
-                        <Label text="Password">
+
+                        <JFXTextField fx:id="loginUsernameText" prefHeight="40.0" prefWidth="280.0" promptText="Username">
                            <font>
-                              <Font name="System Bold" size="12.0" />
-                           </font></Label>
-                        <JFXTextField fx:id="passwordText" prefHeight="26.0" prefWidth="171.0" />
+                              <Font name="Book Antiqua" size="12.0" />
+                           </font></JFXTextField>
+                        <JFXPasswordField fx:id="loginPasswordText" prefHeight="40.0" prefWidth="280.0" promptText="Password">
+                           <font>
+                              <Font name="Book Antiqua" size="12.0" />
+                           </font></JFXPasswordField>
+
+                        <Button fx:id="loginButton" onAction="#loginValidate" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: white; -fx-background-radius: 20;" text="Log In">
+                           <effect>
+                              <DropShadow />
+                           </effect>
+                           <font>
+                              <Font name="Book Antiqua Bold" size="18.0" />
+                           </font>
+                        </Button>
                      </children>
-                  </HBox>
-                  <Button fx:id="loginButton" focusTraversable="false" mnemonicParsing="false" onAction="#loginValidate" prefHeight="41.0" prefWidth="134.0" styleClass="page-nav-btn,login-btn" text="Log In">
-                     <effect>
-                        <DropShadow />
-                     </effect>
-                  </Button>
+                  </VBox>
                </children>
-               <effect>
-                  <DropShadow />
-               </effect>
-            </VBox>
-            <Label layoutX="844.0" layoutY="125.0" prefHeight="64.0" prefWidth="450.0" text="Serenity Mental Health Therapy Center">
-               <font>
-                  <Font name="System Bold" size="24.0" />
-               </font>
-            </Label>
-            <ImageView fitHeight="690.0" fitWidth="667.0" layoutX="88.0" layoutY="54.0">
+            </Pane>
+
+            <!-- Sign In Pane (hidden initially) -->
+            <Pane fx:id="signInTogglePane" layoutY="1.0" prefHeight="600.0" prefWidth="500.0" style="-fx-background-color: #ffffff;">
+               <children>
+                  <VBox fx:id="signInBox" alignment="CENTER" layoutX="90.0" layoutY="60.0" prefHeight="476.0" prefWidth="320.0" spacing="20.0">
+                     <children>
+                        <Label text="Create an Account">
+                           <font>
+                              <Font name="Book Antiqua Bold" size="18.0" />
+                           </font></Label>
+
+                        <JFXTextField fx:id="signInUserIDText" prefHeight="40.0" prefWidth="280.0" promptText="User ID">
+                           <font>
+                              <Font name="Book Antiqua" size="12.0" />
+                           </font></JFXTextField>
+                        <JFXTextField fx:id="signInJobRoleText" prefHeight="40.0" prefWidth="280.0" promptText="Job Role">
+                           <font>
+                              <Font name="Book Antiqua" size="12.0" />
+                           </font>
+                        </JFXTextField>
+                        <JFXTextField fx:id="signInEmailText" prefHeight="40.0" prefWidth="280.0" promptText="Email">
+                           <font>
+                              <Font name="Book Antiqua" size="12.0" />
+                           </font>
+                        </JFXTextField>
+                        <JFXTextField fx:id="signInUsernameText" prefHeight="40.0" prefWidth="280.0" promptText="Username">
+                           <font>
+                              <Font name="Book Antiqua" size="12.0" />
+                           </font>
+                        </JFXTextField>
+                        <JFXPasswordField fx:id="signInPasswordText" prefHeight="40.0" prefWidth="280.0" promptText="Password">
+                           <font>
+                              <Font name="Book Antiqua" size="12.0" />
+                           </font>
+                        </JFXPasswordField>
+                        <JFXPasswordField fx:id="signInPasswordConfirmText" prefHeight="40.0" prefWidth="280.0" promptText="Confirm Password">
+                           <font>
+                              <Font name="Book Antiqua" size="12.0" />
+                           </font>
+                        </JFXPasswordField>
+
+                        <Button fx:id="signInBtn" onAction="#signIn" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: white; -fx-background-radius: 20;" text="Sign Up">
+                           <effect>
+                              <DropShadow />
+                           </effect>
+                           <font>
+                              <Font name="Book Antiqua Bold" size="18.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </VBox>
+               </children>
+            </Pane>
+            <!-- Image View - positioned to cover forms initially -->
+            <ImageView fx:id="logoImage" fitHeight="600.0" fitWidth="500.0" layoutY="1.0" pickOnBounds="true">
                <image>
                   <Image url="@../images/Leonardo_Phoenix_09_A_modern_and_elegant_logo_for_Serenity_Men_0.jpg" />
                </image>
             </ImageView>
          </children>
+         <effect>
+            <DropShadow />
+         </effect>
       </Pane>
+
+      <ToggleButton fx:id="toggleButton" layoutX="691.0" layoutY="171.0" mnemonicParsing="false" onAction="#switchLoginSignIn" prefHeight="39.0" prefWidth="137.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-radius: 20;" text="Switch to Sign Up">
+         <effect>
+            <DropShadow />
+         </effect>
+         <font>
+            <Font name="Book Antiqua Bold" size="14.0" />
+         </font></ToggleButton>
    </children>
 </AnchorPane>
