--- a/src/main/resources/view/welcome-page.fxml
+++ b/src/main/resources/view/welcome-page.fxml
@@ -4,12 +4,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="760.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.ijse.serenitymentalhealth.controller.WelcomeController">
    <children>
       <Label alignment="CENTER" layoutX="210.0" layoutY="14.0" prefHeight="58.0" prefWidth="922.0" text="Welcome to Serenity Mental Health Center">
          <font>
-            <Font name="System Bold" size="40.0" />
+            <Font name="Book Antiqua Bold" size="40.0" />
          </font>
       </Label>
    </children>
