--- a/src/main/resources/view/therapist-availability-page.fxml
+++ b/src/main/resources/view/therapist-availability-page.fxml
@@ -4,17 +4,16 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TreeTableColumn?>
-<?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="577.0" prefWidth="1040.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.ijse.serenitymentalhealth.controller.TherapistAvailabilityController">
+<AnchorPane onMouseClicked="#tableClick" prefHeight="577.0" prefWidth="1040.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.ijse.serenitymentalhealth.controller.TherapistAvailabilityController">
    <children>
       <VBox layoutX="15.0" layoutY="72.0" prefHeight="266.0" prefWidth="666.0" spacing="20.0">
          <children>
@@ -79,15 +78,6 @@
             </HBox>
          </children>
       </VBox>
-      <TreeTableView fx:id="therapistAvailabilityTable" layoutX="128.0" layoutY="344.0" prefHeight="200.0" prefWidth="782.0">
-        <columns>
-          <TreeTableColumn fx:id="availableIdCol" prefWidth="133.60000610351562" text="Availability ID" />
-          <TreeTableColumn fx:id="therapistIdCol" prefWidth="180.80001831054688" text="Therapist ID" />
-            <TreeTableColumn fx:id="availableDateCol" prefWidth="164.79998779296875" text="Date" />
-            <TreeTableColumn fx:id="availableTimeCol" prefWidth="141.60003662109375" text="Time" />
-            <TreeTableColumn fx:id="availableStatusCol" prefWidth="160.0" text="Available" />
-        </columns>
-      </TreeTableView>
       <HBox alignment="CENTER" layoutX="696.0" layoutY="285.0" prefHeight="34.0" prefWidth="334.0" spacing="10.0">
          <children>
             <Button fx:id="deleteButton" focusTraversable="false" mnemonicParsing="false" onAction="#delete" prefHeight="26.0" prefWidth="97.0" styleClass="process-button" stylesheets="@../cssStyles/process-button.css" text="Delete">
@@ -134,5 +124,14 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
+      <TableView fx:id="therapistAvailabilityTable" layoutX="125.0" layoutY="354.0" onMouseClicked="#tableClick" prefHeight="201.0" prefWidth="782.0">
+        <columns>
+          <TableColumn fx:id="availableIdCol" prefWidth="135.1999969482422" text="Availability ID" />
+          <TableColumn fx:id="therapistIdCol" prefWidth="180.0" text="Therapist ID" />
+            <TableColumn fx:id="availableDateCol" prefWidth="168.0" text="Date" />
+            <TableColumn fx:id="availableTimeCol" prefWidth="144.79998779296875" text="Time" />
+            <TableColumn fx:id="availableStatusCol" prefWidth="155.9998779296875" text="Available" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
