--- a/src/main/resources/view/patient-program-page.fxml
+++ b/src/main/resources/view/patient-program-page.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="760.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.ijse.serenitymentalhealth.controller.PatientProgramController">
+<AnchorPane fx:id="bodyPane" prefHeight="760.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.ijse.serenitymentalhealth.controller.PatientProgramController">
    <children>
       <Label alignment="CENTER" layoutX="509.0" layoutY="16.0" prefHeight="35.0" prefWidth="271.0" text="Patient Programs">
          <font>
