--- a/src/main/resources/view/patients-page.fxml
+++ b/src/main/resources/view/patients-page.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="760.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.ijse.serenitymentalhealth.controller.PatientsController">
+<AnchorPane fx:id="bodyPane" prefHeight="760.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.ijse.serenitymentalhealth.controller.PatientsController">
    <children>
       <Label alignment="CENTER" layoutX="589.0" layoutY="30.0" prefHeight="33.0" prefWidth="138.0" text="Patients">
          <font>
