--- a/src/main/resources/view/payments-page.fxml
+++ b/src/main/resources/view/payments-page.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="760.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.ijse.serenitymentalhealth.controller.PaymentsController">
+<AnchorPane fx:id="bodyPane" prefHeight="760.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.ijse.serenitymentalhealth.controller.PaymentsController">
    <children>
       <Label alignment="CENTER" layoutX="615.0" layoutY="21.0" prefHeight="33.0" prefWidth="138.0" text="Payments">
          <font>
