--- a/src/main/resources/view/payments-page.fxml
+++ b/src/main/resources/view/payments-page.fxml
@@ -135,14 +135,14 @@
             </HBox>
          </children>
       </VBox>
-      <TableView fx:id="paymentsTable" layoutX="112.0" layoutY="489.0" prefHeight="242.0" prefWidth="1082.0">
+      <TableView fx:id="paymentsTable" layoutX="112.0" layoutY="489.0" onMouseClicked="#tableClick" prefHeight="242.0" prefWidth="1082.0">
         <columns>
-          <TableColumn prefWidth="145.59997177124023" text="Payment ID" />
-          <TableColumn prefWidth="151.20004272460938" text="Patient ID" />
-            <TableColumn prefWidth="153.06671142578125" text="Program ID" />
-            <TableColumn prefWidth="196.00003051757812" text="Session ID" />
-            <TableColumn prefWidth="281.0667724609375" text="Amount" />
-            <TableColumn prefWidth="147.73370361328125" text="Date" />
+          <TableColumn fx:id="paymentIdCol" prefWidth="145.59997177124023" text="Payment ID" />
+          <TableColumn fx:id="patientIdCol" prefWidth="151.20004272460938" text="Patient ID" />
+            <TableColumn fx:id="programIdCol" prefWidth="153.06671142578125" text="Program ID" />
+            <TableColumn fx:id="sessionIdCol" prefWidth="196.00003051757812" text="Session ID" />
+            <TableColumn fx:id="amountCol" prefWidth="281.0667724609375" text="Amount" />
+            <TableColumn fx:id="dateCol" prefWidth="147.73370361328125" text="Date" />
         </columns>
       </TableView>
       <HBox alignment="CENTER" layoutX="905.0" layoutY="417.0" prefHeight="34.0" prefWidth="358.0" spacing="20.0">
