--- a/src/main/resources/view/patient-program-page.fxml
+++ b/src/main/resources/view/patient-program-page.fxml
@@ -20,7 +20,7 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <VBox layoutX="34.0" layoutY="127.0" prefHeight="223.0" prefWidth="866.0" spacing="20.0">
+      <VBox layoutX="34.0" layoutY="127.0" prefHeight="353.0" prefWidth="866.0" spacing="20.0">
          <children>
             <HBox prefHeight="34.0" prefWidth="314.0" spacing="10.0">
                <children>
@@ -90,6 +90,34 @@
                   <DatePicker fx:id="registerDateTxt" />
                </children>
             </HBox>
+            <HBox prefHeight="34.0" prefWidth="314.0">
+               <children>
+                  <Label prefHeight="18.0" prefWidth="144.0" text="Program Fee">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="programFeeTxt" prefHeight="18.0" prefWidth="144.0" text="program fee">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <HBox prefHeight="34.0" prefWidth="314.0">
+               <children>
+                  <Label prefHeight="18.0" prefWidth="144.0" text="Left to Pay">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="leftToPayTxt" prefHeight="18.0" prefWidth="144.0" text="left to pay">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
          </children>
       </VBox>
       <HBox alignment="CENTER" layoutX="919.0" layoutY="349.0" prefHeight="45.0" prefWidth="338.0" spacing="20.0">
@@ -133,14 +161,14 @@
             </Button>
          </children>
       </HBox>
-      <TableView fx:id="patientProgramTable" layoutX="109.0" layoutY="496.0" onMouseClicked="#tableClick" prefHeight="200.0" prefWidth="1073.0">
+      <TableView fx:id="patientProgramTable" layoutX="155.0" layoutY="496.0" onMouseClicked="#tableClick" prefHeight="200.0" prefWidth="971.0">
         <columns>
           <TableColumn fx:id="patientIdCol" prefWidth="149.86660766601562" text="Patient ID" />
-            <TableColumn fx:id="patientNameCol" prefWidth="225.5999755859375" text="Patient Name" />
           <TableColumn fx:id="programIdCol" prefWidth="145.60003662109375" text="Program ID" />
-            <TableColumn fx:id="programNameCol" prefWidth="232.0" text="Program Name" />
             <TableColumn fx:id="paymentIdCol" prefWidth="150.39996337890625" text="Payment ID" />
             <TableColumn fx:id="registerDateCol" prefWidth="167.46673583984375" text="Register Date" />
+            <TableColumn fx:id="programFeeCol" prefWidth="176.533203125" text="Program Fee" />
+            <TableColumn fx:id="leftToPayCol" prefWidth="176.533203125" text="Left To Pay" />
         </columns>
       </TableView>
       <ToggleButton fx:id="searchToggleButton" layoutX="960.0" layoutY="313.0" mnemonicParsing="false" onAction="#searchToggle" prefHeight="26.0" prefWidth="132.0" text="Search by Patient">
