--- a/src/main/resources/view/login-signup-page.fxml
+++ b/src/main/resources/view/login-signup-page.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -30,11 +31,20 @@
                                   <Font name="Book Antiqua" size="12.0" />
                               </font>
                   </JFXTextField>
-                          <JFXPasswordField fx:id="loginPasswordText" prefHeight="40.0" prefWidth="280.0" promptText="Password">
-                              <font>
-                                  <Font name="Book Antiqua" size="12.0" />
-                              </font>
-                  </JFXPasswordField>
+                  <HBox fx:id="loginVisiblePasswordBox" prefHeight="48.0" prefWidth="280.0">
+                     <children>
+                        <JFXTextField fx:id="loginVisiblePasswordText" prefHeight="40.0" prefWidth="280.0">
+                           <font>
+                              <Font name="Book Antiqua" size="12.0" />
+                           </font>
+                        </JFXTextField>
+                        <ImageView fx:id="seeUnseeEyeImage" fitHeight="42.0" fitWidth="52.0" onMousePressed="#makePasswordVisible" onMouseReleased="#makePasswordInvisible">
+                           <image>
+                              <Image url="@../images/seeEye.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </HBox>
 
                           <Button fx:id="loginButton" onAction="#loginValidate" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: white; -fx-background-radius: 20;" text="Log In">
                               <effect>
@@ -100,6 +110,11 @@
                       <Font name="Book Antiqua Bold" size="36.0" />
                   </font>
               </Label>
+                    <JFXPasswordField fx:id="loginPasswordText" layoutX="855.0" layoutY="435.0" prefHeight="40.0" prefWidth="268.0" promptText="Password">
+                        <font>
+                            <Font name="Book Antiqua" size="12.0" />
+                        </font>
+            </JFXPasswordField>
                 <!-- Image View - positioned to cover forms initially -->
                 <ImageView fx:id="logoImage" fitHeight="600.0" fitWidth="500.0" layoutX="261.0" layoutY="143.0" pickOnBounds="true">
                     <image>
