--- a/src/main/resources/view/home-page.fxml
+++ b/src/main/resources/view/home-page.fxml
@@ -67,7 +67,12 @@
             <DropShadow />
          </effect>
       </VBox>
-      <Button fx:id="logoutBtn" focusTraversable="false" layoutX="35.0" layoutY="693.0" mnemonicParsing="false" onAction="#logOut" prefHeight="41.0" prefWidth="134.0" styleClass="page-nav-btn" text="Log out">
+      <Button fx:id="logoutBtn" focusTraversable="false" layoutX="35.0" layoutY="710.0" mnemonicParsing="false" onAction="#logOut" prefHeight="41.0" prefWidth="134.0" styleClass="page-nav-btn" text="Log out">
+         <effect>
+            <DropShadow />
+         </effect>
+      </Button>
+      <Button fx:id="settingButton" focusTraversable="false" layoutX="35.0" layoutY="646.0" mnemonicParsing="false" onAction="#loadSettings" prefHeight="41.0" prefWidth="134.0" styleClass="page-nav-btn" text="Settings">
          <effect>
             <DropShadow />
          </effect>
