--- a/src/main/resources/view/welcome-page.fxml
+++ b/src/main/resources/view/welcome-page.fxml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="bodyPane" prefHeight="760.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.ijse.serenitymentalhealth.controller.WelcomeController">
@@ -18,5 +23,67 @@
             <Font name="Book Antiqua Bold" size="40.0" />
          </font>
       </Label>
+      <Pane layoutX="973.0" layoutY="195.0" prefHeight="351.0" prefWidth="221.0" style="-fx-background-radius: 20; -fx-border-radius: 20; -fx-background-color: #FFFFFF4D; -fx-border-color: #FFFFFF4D;">
+         <children>
+            <VBox alignment="TOP_CENTER" layoutX="6.0" layoutY="11.0" prefHeight="330.0" prefWidth="210.0" spacing="20.0">
+               <children>
+                  <Label alignment="CENTER" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-radius: 20;" text="Reports">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="40.0" />
+                     </VBox.margin>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Label>
+                  <Button fx:id="report1Btn" focusTraversable="false" mnemonicParsing="false" onAction="#loadReport1" prefHeight="26.0" prefWidth="188.0" styleClass="process-button" stylesheets="@../cssStyles/process-button.css" text="Report 1">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="report2Btn" focusTraversable="false" mnemonicParsing="false" onAction="#loadReport2" prefHeight="26.0" prefWidth="188.0" styleClass="process-button" stylesheets="@../cssStyles/process-button.css" text="Report 2">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="report3Btn" focusTraversable="false" mnemonicParsing="false" onAction="#loadReport3" prefHeight="26.0" prefWidth="188.0" styleClass="process-button" stylesheets="@../cssStyles/process-button.css" text="Report 3">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="report4Btn" focusTraversable="false" mnemonicParsing="false" onAction="#loadReport4" prefHeight="26.0" prefWidth="188.0" styleClass="process-button" stylesheets="@../cssStyles/process-button.css" text="Report 4">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="report5Btn" focusTraversable="false" mnemonicParsing="false" onAction="#loadReport5" prefHeight="26.0" prefWidth="188.0" styleClass="process-button" stylesheets="@../cssStyles/process-button.css" text="Report 5">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+               </children>
+            </VBox>
+         </children>
+         <effect>
+            <DropShadow />
+         </effect>
+      </Pane>
    </children>
 </AnchorPane>
